# traffic-simulator

./: .bazelrc  .bazelrc.remote  .coverage  .coveragerc  .cspell.json  .cursorignore  .gitignore  .markdownlintignore  .pre-commit-config.yaml  .pre-commit-quality-gates.yaml  AGENTS.md  BAZEL_MIGRATION_HANDOFF.md  BENCHMARKING_OPTIMIZATION_SUMMARY.md  JIRA_IMPLEMENTATION_PLAN.md  JIRA_MCP_INTEGRATION_GUIDE.md  MODULE.bazel  PERFORMANCE_OPTIMIZATION_SUMMARY.md  README.md  ROADMAP.md  TODO_TO_JIRA_MIGRATION_STRATEGY.md  Taskfile.yml  WORKSPACE  WORKSPACE.bazel  YAML_CONVERSION_SUMMARY.md  bandit.yaml  baseline_performance.csv  bazel-bin  bazel-out  bazel-testlogs  bazel-traffic-simulator  convert_prompts_to_yaml.py  cspell.json  date_mapping.txt  demonstrate_yaml_improvement.py  execute_redistribution.py  mypy.ini  package-lock.json  package.json  profiling_stats.csv  profiling_stats_baseline.csv  (+13 more)
.cspell/: python-libraries.txt  traffic-sim-project.txt
.cursor/: mcp.json
config/: .pre-commit-config.yaml  BUILD.bazel  Taskfile.yml  benchmarking.yaml  commitlint.config.js  config.yaml  cspell.json  markdownlint.yaml  quality_gates.yaml  requirements.txt  requirements_test.txt
docs/: AGENT_DOCUMENTATION_CHECKLIST.md  ARCHITECTURE.md  AUTOMATED_PROMPT_ENGINEERING.md  BATCH_PROCESSING_METHODOLOGY.md  (+23 more)
mcp/: AGENT_PROMPT_SYSTEM_SUMMARY.md  AGENT_PROMPT_WORKFLOWS.md  CHECKPOINT_SUMMARY.md  CLEANUP_SUMMARY.md  DEPLOYMENT_COMPLETE.md  FINAL_DEPLOYMENT_SUMMARY.md  FINAL_DIRECTORY_STRUCTURE.md  FINAL_STATUS_REPORT.md  FINAL_SUMMARY_REPORT.md  INTEGRATION_GUIDE.md  MAINTENANCE_GUIDE.md  MCP_PROMPT_TOOLS_READY.md  PRODUCTION_SYSTEM_GUIDE.md  PROMPT_DIRECTORY_CLARIFICATION.md  PROMPT_SYSTEM_MIGRATION_COMPLETE.md  PROMPT_WIZARD_GUIDE.md  PROMPT_WIZARD_SUMMARY.md  README.md  REAL_WORLD_AGENT_EXAMPLE.md  SYSTEM_VERIFICATION_GUIDE.md  TOOL_REFERENCE_CARD.md  advanced_optimization.py  continuous_monitoring.py  deploy_production.py  deploy_production_system.py  fastmcp_production_server.py  fastmcp_test_server.py  minimal_mcp_server.py  monitoring_dashboard.py  performance_benchmarks.py  production_validation.py  prompt_manager.py  prompt_optimizer.py  pyproject.toml  simple_working_mcp_server.py  test_mcp_fixes.py  test_prompt_wizard.py  test_simple_mcp_server.py  test_suite.py  yaml_prompt_loader.py
mcp/mcp_traffic_sim/: IMPLEMENTATION_SUMMARY.md  USER_WORKFLOW_GUIDE.md  __init__.py  advanced_file_manager.py  alerting_system.py  client_test.py  config.py  continuous_improvement.py  dashboard_generator.py  dspy_modules.py  dspy_optimizers.py  dspy_signatures.py  feedback_collector.py  integration_system.py  logging_util.py  meta_optimizer.py  monitoring_system.py  production_optimizer.py  production_server.py  prompt_integration_workflow.py  prompt_registry.py  proper_mcp_optimization_tool.py  register_core_prompts.py  security.py  server.py  server_dspy_optimization.py  server_with_optimization.py  simple_realtime_optimization.py  test_complete_system.py  test_dspy_system.py  test_mcp_server.py  test_meta_optimizer_with_llm.py  test_prompt_execution.py  test_realtime_optimization.py
mcp/mcp_traffic_sim/examples/prompt_management/: migration_example.py
mcp/mcp_traffic_sim/git/: __init__.py  adapter.py  schemas.py  tools.py
mcp/mcp_traffic_sim/mcp_registry/: integration_report.md  prompts.json
mcp/mcp_traffic_sim/prompts/: __init__.py  advanced_integration.py  advanced_tools.py  continuous_improvement.py  datasets.py  dspy_modules.py  evaluator.py  integration.py  meta_optimizer.py  optimizers.py  registry.py  requirements.txt  schemas.py  tools.py
mcp/mcp_traffic_sim/prompts/examples/: phase3_demo.py
mcp/mcp_traffic_sim/tasks/: __init__.py  bazel_runner.py  schemas.py  tools.py  uv_runner.py
mcp/mcp_traffic_sim/tests/: test_git_adapter_test.py
mcp/mcp_traffic_sim/tools/: optimize_prompt.py
scripts/: BUILD.bazel  advanced_profiling.py  bazel_performance.sh  bazel_performance_monitor.py  benchmark_highperf.py  benchmarking_framework.py  benchmarking_framework_optimized.py  check_test_consistency.py  ensure_runs_directory.py  external_tools.py  fix_test_consistency.py  migrate_performance_tests.py  performance_analysis.py  performance_monitor.py  performance_optimizations.py  profile_simulation.py  prompt_version_manager.py  quality_analysis.py  quality_analysis_optimized.py  quality_fast.py  quality_gates.py  quality_monitor.py  scale_benchmark.py  security_check.sh  setup_buildbuddy.sh  static_analysis.py  validate_context_optimization.py  validate_production_system.py  validate_rules.py  validation_test.py
src/traffic_sim/: BUILD.bazel  __init__.py  __main__.py
src/traffic_sim/config/: BUILD.bazel  loader.py
src/traffic_sim/core/: BUILD.bazel  __init__.py  adaptive_time.py  analytics.py  analytics_hud.py  collision.py  collision_scheduler.py  data_manager.py  driver.py  hud.py  idm_vectorized.py  logging.py  perception.py  performance.py  physics_numpy.py  physics_vectorized.py  profiling.py  simulation.py  simulation_headless.py  spatial_hash.py  track.py  vehicle.py
src/traffic_sim/models/: BUILD.bazel  driver_specs.py  vehicle_specs.py
src/traffic_sim/render/: BUILD.bazel  __init__.py  app.py
tests/: BUILD.bazel  adaptive_time_test.py  analytics_collision_test.py  benchmark_test.py  collision_prefilter_test.py  collision_scheduler_test.py  config_loader_test.py  conftest.py  data_manager_test.py  driver_specs_test.py  idm_test.py  idm_vectorized_test.py  logging_test.py  main_test.py  perception_window_test.py  performance_highperf_test.py  performance_smoke_test.py  performance_test.py  physics_numpy_physics_test.py  physics_numpy_test.py  physics_vectorized_test.py  profiling_test.py  rendering_integration_test.py  sim_test.py  spatial_hash_test.py  test_config_loader_test.py  test_driver_specs.py  test_idm.py  test_idm_test.py  test_logging.py  test_logging_simple_test.py  test_logging_test.py  test_main.py  test_rendering_integration_test.py  test_sim.py  test_track.py  test_track_properties.py  track_properties_test.py  track_test.py  validation_test.py
(+95 files in other folders)
