[project]
name = "traffic-simulator"
version = "0.1.0"
description = "2D traffic simulation with arcade+pymunk, statistical drivers, safety analytics"
authors = [{ name = "Project Authors" }]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
	"arcade>=3.0.0",
	"pymunk>=6.5.0",
	"pyyaml>=6.0",
	"numpy>=1.26",
	"numba>=0.55.0",
	"psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.3.2",
	"pytest-cov>=5.0.0",
	"hypothesis>=6.111.0",
	"pre-commit>=3.8.0",
	"ruff>=0.6.0",
	"black>=24.8.0",
	"pyright>=1.1.400",
	"bandit>=1.7.0",
	"radon>=6.0.0",
	"semgrep>=1.0.0",
	# Benchmarking and performance tools
	"pytest-benchmark>=4.0.0",
	"pyperf>=2.0.0",
	"psutil>=5.9.0",
	"memory-profiler>=0.60.0",
	"line-profiler>=4.0.0",
	"pympler>=0.9",
	# Statistical analysis
	"scipy>=1.7.0",
	"pandas>=1.3.0",
	# Visualization tools
	"matplotlib>=3.5.0",
	"seaborn>=0.11.0",
	"plotly>=5.0.0",
	# Parallel processing
	"joblib>=1.1.0",
	# Data handling
	"h5py>=3.6.0",
	# Enhanced testing
	"pytest-xdist>=2.5.0",
	"pytest-html>=3.1.0",
	# Optional advanced tools
	"asv>=0.4.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
# uv will read project metadata and manage lock/sync

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
# Allow imports after docstrings in test files for direct runnability
"tests/*.py" = ["E402"]


[tool.ruff.lint.flake8-type-checking]
# Allow imports that are used at runtime, not just for type annotations
runtime-evaluated-base-classes = ["dataclasses.dataclass"]

[tool.pyright]
# Pyright configuration for better type checking
include = ["src/"]
exclude = ["tests/", "scripts/", "**/__pycache__", "**/node_modules"]
pythonVersion = "3.10"
typeCheckingMode = "standard"
useLibraryCodeForTypes = true
reportMissingImports = true
reportMissingTypeStubs = false
reportUnnecessaryTypeIgnoreComment = true

[tool.black]
line-length = 100

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20250915",
]
