[project]
name = "traffic-simulator"
version = "0.1.0"
description = "2D traffic simulation with arcade+pymunk, statistical drivers, safety analytics"
authors = [{ name = "Project Authors" }]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
	"arcade>=3.0.0",
	"pymunk>=6.5.0",
	"pyyaml>=6.0",
	"numpy>=1.26",
	"numba>=0.55.0",
	"psutil>=5.9.0",
	"dspy-ai>=3.0.3",
	"pydantic>=2.11.9",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.3.2",
	"pytest-cov>=5.0.0",
	"hypothesis>=6.111.0",
	"pre-commit>=3.8.0",
	"ruff>=0.6.0",
	"black>=24.8.0",
	"pyright>=1.1.400",
	"bandit>=1.7.0",
	"radon>=6.0.0",
	"semgrep>=1.0.0",
	# Benchmarking and performance tools
	"pytest-benchmark>=4.0.0",
	"pyperf>=2.0.0",
	"psutil>=5.9.0",
	# Profiling tools (removed unused dependencies)
	# "memory-profiler>=0.60.0",  # Not used in source code
	# "line-profiler>=4.0.0",  # Not used in source code
	# "pympler>=0.9",  # Not used in source code
	# Statistical analysis (removed unused dependencies)
	# "scipy>=1.7.0",  # Not used in source code
	# "pandas>=1.3.0",  # Not used in source code
	# Visualization tools (removed unused dependencies)
	# "matplotlib>=3.5.0",  # Not used in source code
	# "seaborn>=0.11.0",  # Not used in source code
	# "plotly>=5.0.0",  # Not used in source code
	# Parallel processing (removed unused dependencies)
	# "joblib>=1.1.0",  # Not used in source code
	# Data handling (removed unused dependencies)
	# "h5py>=3.6.0",  # Not used in source code
	# Enhanced testing
	"pytest-xdist>=2.5.0",
	"pytest-html>=3.1.0",
	# Optional advanced tools (removed unused dependencies)
	# "asv>=0.4.0",  # Not used in source code
	# Dependency analysis
	"deptry>=0.23.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
# uv will read project metadata and manage lock/sync

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
# Allow imports after docstrings in test files for direct runnability
"tests/*.py" = ["E402"]

[tool.ruff.lint.flake8-type-checking]
# Allow imports that are used at runtime, not just for type annotations
runtime-evaluated-base-classes = ["dataclasses.dataclass"]

[tool.pyright]
# Pyright configuration for better type checking
include = ["src/"]
exclude = ["tests/", "scripts/", "**/__pycache__", "**/node_modules"]
pythonVersion = "3.10"
typeCheckingMode = "standard"
useLibraryCodeForTypes = true
reportMissingImports = true
reportMissingTypeStubs = false
reportUnnecessaryTypeIgnoreComment = true

[tool.black]
line-length = 100

# Note: deptry configuration moved to command line options
# Run: uv run deptry . --ignore DEP002,DEP003 --per-rule-ignores "DEP002=pytest,pytest-cov,hypothesis,pre-commit,ruff,black,pyright,bandit,radon,semgrep,pyperf,pytest-xdist,pytest-html,deptry"

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20250915",
]
