[project]
name = "mcp-traffic-sim"
version = "0.1.0"
description = "MCP server for traffic simulator Git and task operations"
requires-python = ">=3.10"

dependencies = [
    "modelcontextprotocol>=0.1.0",  # Official MCP Python SDK
    "dulwich>=0.21.0",              # Pure Python Git implementation
    "pydantic>=2.0.0",              # Data validation and serialization
    "psutil>=5.9.0",                # Process management and timeouts
    "pyyaml>=6.0",                   # Configuration file support
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["mcp_traffic_sim/tests"]
addopts = "-v --tb=short"
