py_binary(
    name = "benchmarking_framework",
    srcs = ["benchmarking_framework.py"],
    deps = [
        "//src/traffic_sim:traffic_sim",
    ],
    data = [
        "//config:config",
    ],
)

# Bazel performance monitoring script
py_binary(
    name = "bazel_performance_monitor",
    srcs = ["bazel_performance_monitor.py"],
    main = "bazel_performance_monitor.py",
    visibility = ["//visibility:public"],
)
