py_binary(
    name = "benchmarking_framework",
    srcs = ["benchmarking_framework.py"],
    deps = [
        "//src/traffic_sim:traffic_sim",
    ],
    data = [
        "//config:config",
    ],
)

py_binary(
    name = "external_tools",
    srcs = ["external_tools.py"],
    deps = [
        "//src/traffic_sim:traffic_sim",
    ],
    data = [
        "//config:config",
    ],
)

py_binary(
    name = "advanced_profiling",
    srcs = ["advanced_profiling.py"],
    deps = [
        "//src/traffic_sim:traffic_sim",
    ],
    data = [
        "//config:config",
    ],
)
