load("@pip_dev//:requirements.bzl", "requirement")

py_test(
    name = "all_tests",
    srcs = glob(["*_test.py"]) + ["conftest.py"],
    main = "conftest.py",
    deps = [
        "//src/traffic_sim:traffic_sim",
        requirement("pytest"),
        requirement("pytest-xdist"),
        requirement("pytest-cov"),
        requirement("pytest-mock"),
    ],
    args = ["-n=auto"],
)
