py_library(
    name = "traffic_sim",
    srcs = glob(["**/*.py"]),
    data = glob(["**/*.yaml", "**/*.json"]),
    imports = [".."],
    visibility = ["//visibility:public"],
    deps = [
        "//src/traffic_sim/config:config",
        "//src/traffic_sim/core:core",
        "//src/traffic_sim/models:models",
        "//src/traffic_sim/render:render",
    ],
)
