# Optimized main library with explicit source files for better parallelization
py_library(
    name = "traffic_sim",
    srcs = [
        "__init__.py",
    ],
    data = glob(["**/*.yaml", "**/*.json"]),
    imports = [".."],
    visibility = ["//visibility:public"],
    deps = [
        "//src/traffic_sim/config:config",
        "//src/traffic_sim/core:core",
        "//src/traffic_sim/models:models",
        "//src/traffic_sim/render:render",
    ],
)

# Binary target for running the simulator
py_binary(
    name = "traffic_sim_bin",
    srcs = ["__init__.py"],
    main = "__init__.py",
    deps = [":traffic_sim"],
    visibility = ["//visibility:public"],
)
